<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">
    <TextView
        style="@style/Card_header_Text"
        android:text="@string/Card_header_Text"
        android:id="@+id/CardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:text="@string/FName"
        android:id="@+id/name_header"
        app:layout_constraintTop_toBottomOf="@id/CardText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editfname"
       android:hint="@string/enter_the_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="@string/enter_the_first_name"
        android:inputType="text" />
    <TextView
        style="@style/Card_TextView"
        android:text="@string/LName"
        android:id="@+id/lname_header"
        app:layout_constraintTop_toBottomOf="@id/editfname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editlname"
        android:hint="@string/enter_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_last_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/lname_header"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/email_header"
        android:text="@string/Email"
        app:layout_constraintTop_toBottomOf="@id/editlname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editemail"
        android:hint="@string/enter_email_id"
        app:layout_constraintTop_toBottomOf="@id/email_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="@string/enter_email_id"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/gender_header"
        android:text="@string/Gender"
        app:layout_constraintTop_toBottomOf="@id/editemail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editgender"
        android:hint="@string/enter_employee_gender"
        app:layout_constraintTop_toBottomOf="@id/gender_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="@string/enter_employee_gender"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/status_header"
        android:text="@string/Status"
        app:layout_constraintTop_toBottomOf="@id/editgender"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editstatus"
        android:hint="@string/enter_status"
        app:layout_constraintTop_toBottomOf="@id/status_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:autofillHints="@string/enter_status"
        android:inputType="text"
        android:layout_height="wrap_content"/>
    <Button
        style="@style/Button"
        android:text="@string/Submit"
        android:id="@+id/submit"
        app:layout_constraintTop_toBottomOf="@id/editstatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        style="@style/Button"
        android:text="@string/deleteUser"
        android:id="@+id/deleteUser"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>